Link to login and register

--- a/src/App.css
+++ b/src/App.css
@@ -326,6 +326,9 @@ button {
   color: var(--primary-color);
 }
 
+.nav-link:hover{
+  color: var(--primary-color);
+}
 .navbar .welcome span {
   margin-right: 0.6rem;
 }
